[tool.poetry]
name = "iba-rag"
version = "0.1.0"
description = "IBA RAG Project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# 1. 핵심 LangChain 컴포넌트
langchain-core = "0.*"
langchain-community = "0.*"
langchain-text-splitters = "0.*"

jupyter = "1.*"

# 2. LLM 모델 관련 (Gemini & OpenAI)
langchain-google-genai = "2.*"
langchain-openai = "0.*"  # 코드 상단의 import 문을 지우시면 이 패키지도 삭제 가능합니다.

# 3. 벡터 DB 및 PDF 로더 의존성
faiss-cpu = "1.*"  # FAISS 사용 시 필수
pymupdf = "1.*"    # PyMuPDFLoader 사용 시 필수

# 4. 환경 변수 관리
python-dotenv = "1.*"